--- a/Languages/default-sl-si.xml
+++ b/Languages/default-sl-si.xml
@@ -4367,18 +4367,21 @@
 			<control caption="http://shareaza.sourceforge.net/"/>
 			<control caption="V redu"/>
 		</dialog>
-		<dialog name="CExistingFileDlg" cookie="StStStStBuBuBuBuBuStSt" caption="Obstoječa datoteka">
+		<dialog name="CExistingFileDlg" cookie="BuBuBuBuBuStStStStStStBuSt" caption="Obstoječa datoteka">
+			<control caption="V redu"/>
+			<control caption="Prekliči"/>
+			<control caption="Pokaži mi datoteko v knjižnici"/>
+			<control caption="Ponovno prenesi datoteko"/>
+			<control caption="Ne prenesi datoteke"/>
 			<control/>
 			<control/>
 			<control/>
 			<control caption="Ta datoteka že obstaja v vaši knjižnici. Kaj želite storiti?"/>
-			<control caption="Pokaži mi datoteko v knjižnici"/>
-			<control caption="Ponovno prenesi datoteko"/>
-			<control caption="Ne prenesi datoteke"/>
-			<control caption="V redu"/>
-			<control caption="Prekliči"/>
 			<control caption="To datoteko ste že prenesli in zbrisali. Kaj želite storiti?"/>
 			<control caption="Warning! Duplicate files detected. Some malicious software may infect your Library. Make sure that you downloaded this file or placed it manually. Otherwise, shutdown Shareaza and scan your computer with an antivirus program."/>
+			<control/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CCloseModeDlg" cookie="StBuBuBuBuBu" caption="Zapri gumb">
 			<control caption="To je prvič, da ste uporabili Shareazin gumb za zapiranje. Izberite dejanje, ki želite da ga izvede Shareaza, od sedaj naprej, ko boste ponovno klinili na ta-isti gumb:"/>
